rudder-web-upload

--- a/client/src/language/eng/translation.json
+++ b/client/src/language/eng/translation.json
@@ -43,6 +43,6 @@
     "three": "Employment Opportunities​"
   },
   "footer": {
-    "description": "Automatics Co., Ltd. | CEO : John Sanghak Lee | Address: (GIDC, A1312) 43, Iljik-ro, Gwangmyeong-si, Gyeonggi-do, South Korea | Business Registration : 319-88-01686 | Contact Number : 070-7773-9037 | Contact Email : "
+    "description": "RUDDER Co., Ltd. | CEO : 000000 | Address: (0000, 0000) 43, 0000-ro, Gwangmyeong-si, Gyeonggi-do, South Korea | Business Registration : 0000-00-0000-0 | Contact Number : 000-0000-0000 | Contact Email : "
   }
 }
