--- a/client/src/language/kor/translation.json
+++ b/client/src/language/kor/translation.json
@@ -4,9 +4,9 @@
     "img2": "/assets/images/logoKr.png"
   },
   "card": {
-    "title": "자동차&모터스포츠 관련 비즈니스 솔루션 전문 기업",
+    "title": "테스트 텍스트 타이틀",
     "title2": "",
-    "sub_title": "모터스포츠 대회 기획&운영, 자동차 유관기업 및 기업의 다양한 행사 등 자동차를 주제로 하는 다양한 분야에서 사업을 영위하고 있습니다.",
+    "sub_title": "테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀",
     "card1_contents1": "브랜드 행사 기획 및 운영",
     "card1_contents2": "온/오프라인 홍보 마케팅",
     "card2_contents1": "대회 운영/기획",
@@ -17,15 +17,15 @@
     "card4_contents2": "파트너쉽 통한 솔루션 제공"
   },
   "game": {
-    "title1": "국내 자동차 산업의 게임체인저로서",
+    "title1": "테스트 글자 테스트 텍스트 타이틀 타이틀",
     "title2": "새로운 바람을 불어넣는 젊고 혁신적인 기업이 되겠습니다.",
     "title3": "",
     "title4": "",
 
-    "contents1": "오토매닉스는 국내 최대 디지털 자산 거래소 두나무의 계열사로",
-    "contents2": "2021년,국대 최대 e스포츠 레이싱 대회인 AMX E스포츠 챔피언쉽을 개최하였습니다.",
-    "contents3": "이처럼 누구도 가지 못한 길을 개척하는 도전정신을 바탕으로",
-    "contents4": "모터스포츠 트렌드를 선도하고자 지속적인 노력을 해나가겠습니다.",
+    "contents1": "테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자테스트",
+    "contents2": "테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자",
+    "contents3": "테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자",
+    "contents4": "테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자테스트 글자.",
     "contents5": "",
 
     "img1": "/assets/images/automanix-aff-kr.png",
@@ -33,7 +33,7 @@
     "img3": "/assets/images/img-amx.png"
   },
   "event": {
-    "first": "오토매닉스는",
+    "first": "RUDDER 는",
     "second": "귀사의 성공적인",
     "third": "이벤트와 함께합니다."
   },
@@ -43,6 +43,6 @@
     "three": "입사 문의"
   },
   "footer": {
-    "description": "(주)오토매닉스 | 대표자 : 이상학 | 주소 : 경기도 광명시 일직로43, A동 13층 1312호(일직동, GIDC) | 사업자 등록번호 : 319-88-01686 | 대표번호 : 070-7773-9037 | 대표 이메일 : "
+    "description": "(주)RUDDER | 대표자 : 0000 | 주소 : 서울 특별시 남부순환로 43, A동 138층 13809호(미라니동, ABCD) | 사업자 등록번호 : 000-00-0000 | 대표번호 : 000-0000-0000 | 대표 이메일 : "
   }
 }
