--- a/client/src/language/kor/translation.json
+++ b/client/src/language/kor/translation.json
@@ -7,14 +7,14 @@
     "title": "테스트 텍스트 타이틀",
     "title2": "",
     "sub_title": "테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀",
-    "card1_contents1": "브랜드 행사 기획 및 운영",
-    "card1_contents2": "온/오프라인 홍보 마케팅",
-    "card2_contents1": "대회 운영/기획",
-    "card2_contents2": "대회 홍보/마케팅",
-    "card3_contents1": "심 레이싱 대회 운영/기획",
-    "card3_contents2": "방송제작 및 송출",
-    "card4_contents1": "자동차 유관 산업 제휴 및",
-    "card4_contents2": "파트너쉽 통한 솔루션 제공"
+    "card1_contents1": "서비스 준비중 입니다.",
+    "card1_contents2": "서비스 준비중 입니다.",
+    "card2_contents1": "서비스 준비중 입니다.",
+    "card2_contents2": "서비스 준비중 입니다.",
+    "card3_contents1": "서비스 준비중 입니다.",
+    "card3_contents2": "서비스 준비중 입니다.",
+    "card4_contents1": "서비스 준비중 입니다.",
+    "card4_contents2": "서비스 준비중 입니다."
   },
   "game": {
     "title1": "테스트 글자 테스트 텍스트 타이틀 타이틀",
