--- a/client/src/language/kor/translation.json
+++ b/client/src/language/kor/translation.json
@@ -7,7 +7,7 @@
     "title": "테스트 텍스트 타이틀",
     "title2": "",
     "sub_title": "테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀 테스트 텍스트 서브 타이틀",
-    "card1_contents1": "서비스 준비중 입니다.",
+    "card1_contents1": "서비스 준비중 입니다 테스트.",
     "card1_contents2": "서비스 준비중 입니다.",
     "card2_contents1": "서비스 준비중 입니다.",
     "card2_contents2": "서비스 준비중 입니다.",
@@ -18,7 +18,7 @@
   },
   "game": {
     "title1": "테스트 글자 테스트 텍스트 타이틀 타이틀",
-    "title2": "젊고 혁신적인 기업이 되겠습니다.",
+    "title2": "젊고 혁신적인 기업테스트테스트테스트이 되겠습니다.",
     "title3": "",
     "title4": "",
 
